# Palautusrepo

./: LICENSE.txt  README.md
osa3/hello-docker/: Dockerfile
osa3/hello-robot/: log.html  output.xml  pyproject.toml  report.html
osa3/hello-robot/src/: CounterLibrary.py
osa3/hello-robot/src/tests/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  pyproject.toml  report.html
osa3/login-robot/src/tests/: log.html  login.robot  output.xml  register.robot  report.html  resource.robot
osa4/: pyproject.toml  retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
osa4/mock-demo/tests-old/: kauppa_test.old
