[project]
name = "osa4"
version = "0.1.0"
description = ""
authors = [
    {name = "Viikarma",email = "viikarma@jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
